# tinkoff

./: .gitignore  CMakeLists.txt  README.md
lesson01-sorts/: A.cpp  F.cpp  H.cpp  L.cpp  L_stupid.cpp  M.cpp  M_stupid.cpp
lesson02-searches/: B2.cpp  C2.cpp  D2.cpp  E2.cpp  F2.cpp  G2.cpp  H2.cpp  J2.cpp
lesson03-graphs-bfs-dfs/: A3.cpp  B3.cpp  C3.cpp  D3.cpp  E3.cpp  G3.cpp  I3.cpp  J3.cpp  K3.cpp  O3.cpp
lesson04-dp/: A4.cpp  B4.cpp  C4.cpp  E4.cpp  G4.cpp
lesson05-cpp-datastruct/: A5.cpp  D5.cpp  E5.cpp  F5.cpp  G5.cpp  H5.cpp
lesson06-math/: B6.cpp  D6.cpp  H6.cpp
lesson07-shortest-paths/: F7.cpp  I7.cpp  J7.cpp
lesson08-dsu/: A8.cpp  E8.cpp  F8.cpp  G8.cpp  G8_dumb.cpp  H8.cpp
lesson09-lca/: C9.cpp  D9.cpp  G9.cpp
lesson1-sorts/: B.cpp  C.cpp  D.cpp  E.cpp  G.cpp  I.cpp  J.cpp  K.cpp  L.cpp
lesson10-sqrt/: I10.cpp
lesson11-geometry1/: A11.cpp  B11.cpp  C11.cpp  D11.cpp  E11.cpp  F11.cpp  G11.cpp  H11.cpp  I11.cpp  J11.cpp  K11.cpp  L11.cpp  N11.cpp
lesson12-bridges-hashes/: A12.cpp  B12.cpp  C12.cpp  E12.cpp  G12.cpp  H12.cpp
lesson13-segtree/: A13.cpp  C13.cpp  D13.cpp  F13.cpp  G13.cpp  H13.cpp  H13_bp.cpp  I13.cpp  J13.cpp
lesson15-combinatoric-obj/: A15.cpp  B15.cpp  C15.cpp  D15.cpp  E15.cpp  F15.cpp  G15.cpp  I15.cpp
lesson18-strings/: D18.cpp  E18.cpp  G18.cpp  H18.cpp  I18.cpp  J18.cpp
lesson19-parsoch/: A19.cpp
lesson2-searches/: A2.cpp  H2.cpp  I2.cpp  J2.cpp
lesson20-treap/: A20.cpp  A20_dumb.cpp  B20.cpp  C20.cpp  D20.cpp  E20.cpp  F20.cpp  G20.cpp  H20.cpp  H20_dumb.cpp  I20.cpp  gen.py  genH.py
lesson21-fenwick/: A21.cpp  B21.cpp  C21.cpp  D21.cpp
lesson22-dp-digits/: A22.cpp
lesson23-mitm/: A23.cpp  A23_dumb.cpp  E23.cpp  E23_dumb.cpp  H23.cpp  I23.cpp  I23_new.cpp  checkerE.py  genA.py  genE.py
lesson24-suffmas/: A24.cpp  B24.cpp  C24.cpp  C24_dumb.cpp  H24.cpp  test.py
lesson3-graphs-bfs-dfs/: H3.cpp  P3.cpp
lesson4-dp/: D4.cpp  F4.cpp  G4.cpp
lesson5-cpp-datastruct/: B5.cpp  C5.cpp  G5.cpp
lesson6-math/: A6.cpp  F6.cpp  G6.cpp
lesson7-shortest-paths/: G7.cpp  K7.cpp  L7.cpp
lesson8-dsu/: I8.cpp  genG.py
lesson9-lca/: A9.cpp  C9.cpp  D9.cpp  G9.cpp  K9.cpp
