cmake_minimum_required(VERSION 3.14)
project(tinkoff)

set(CMAKE_CXX_STANDARD 20)
#set(ALLOW_DUPLICATE_CUSTOM_TARGETS TRUE)

#add_subdirectory(lesson2-searches)

add_executable(A.o lesson1-sorts/A.cpp)
add_executable(B.o lesson1-sorts/B.cpp)
add_executable(C.o lesson1-sorts/C.cpp)
add_executable(D.o lesson1-sorts/D.cpp)
add_executable(E.o lesson1-sorts/E.cpp)
add_executable(F.o lesson1-sorts/F.cpp)
add_executable(J.o lesson1-sorts/J.cpp)
add_executable(G.o lesson1-sorts/G.cpp)
add_executable(H.o lesson1-sorts/H.cpp)
add_executable(I.o lesson1-sorts/I.cpp)
add_executable(K.o lesson1-sorts/K.cpp)
add_executable(L.o lesson1-sorts/L.cpp)
add_executable(M.o lesson1-sorts/M.cpp)
add_executable(M_stupid.o lesson1-sorts/M_stupid.cpp)
add_executable(L_stupid.o lesson1-sorts/L_stupid.cpp)


#set_target_properties(A.o PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lesson1-sorts/")
add_executable(A2.o lesson2-searches/A2.cpp)
add_executable(B2.o lesson2-searches/B2.cpp)
add_executable(C2.o lesson2-searches/C2.cpp)
add_executable(D2.o lesson2-searches/D2.cpp)
add_executable(E2.o lesson2-searches/E2.cpp)
add_executable(F2.o lesson2-searches/F2.cpp)
add_executable(G2.o lesson2-searches/G2.cpp)
add_executable(H2.o lesson2-searches/H2.cpp)
add_executable(I2.o lesson2-searches/I2.cpp)
add_executable(J2.o lesson2-searches/J2.cpp)
add_executable(A3.o lesson3-graphs-bfs-dfs/A3.cpp)
add_executable(B3.o lesson3-graphs-bfs-dfs/B3.cpp)
add_executable(C3.o lesson3-graphs-bfs-dfs/C3.cpp)
add_executable(D3.o lesson3-graphs-bfs-dfs/D3.cpp)
add_executable(E3.o lesson3-graphs-bfs-dfs/E3.cpp)
add_executable(A4.o lesson4-dp/A4.cpp)
add_executable(B4.o lesson4-dp/B4.cpp)
add_executable(C4.o lesson4-dp/C4.cpp)
add_executable(D4.o lesson4-dp/D4.cpp)
add_executable(E4.o lesson4-dp/E4.cpp)
add_executable(F4.o lesson4-dp/F4.cpp)
add_executable(A5.o lesson5-cpp-datastruct/A5.cpp)
add_executable(B5.o lesson5-cpp-datastruct/B5.cpp)
add_executable(C5.o lesson5-cpp-datastruct/C5.cpp)
add_executable(E5.o lesson5-cpp-datastruct/E5.cpp)
add_executable(F5.o lesson5-cpp-datastruct/F5.cpp)
add_executable(G5.o lesson5-cpp-datastruct/G5.cpp)
add_executable(A6.o lesson6-math/A6.cpp)
add_executable(B6.o lesson6-math/B6.cpp)
add_executable(D6.o lesson6-math/D6.cpp)
add_executable(F6.o lesson6-math/F6.cpp)
add_executable(G6.o lesson6-math/G6.cpp)
add_executable(A8.o lesson8-dsu/A8.cpp)
add_executable(E8.o lesson8-dsu/E8.cpp)
add_executable(A9.o lesson9-lca/A9.cpp)
add_executable(C9.o lesson9-lca/C9.cpp)
add_executable(I10.o lesson10-sqrt/I10.cpp)
add_executable(J10.o lesson10-sqrt/J10.cpp)
add_executable(H3.o lesson3-graphs-bfs-dfs/H3.cpp)
add_executable(I3.o lesson3-graphs-bfs-dfs/I3.cpp)
add_executable(J3.o lesson3-graphs-bfs-dfs/J3.cpp)
add_executable(K3.o lesson3-graphs-bfs-dfs/K3.cpp)
add_executable(B11.o lesson11-geometry1/B11.cpp)
add_executable(L11.o lesson11-geometry1/L11.cpp)
add_executable(C11.o lesson11-geometry1/C11.cpp)
add_executable(A11.o lesson11-geometry1/A11.cpp)
add_executable(G11.o lesson11-geometry1/G11.cpp)
add_executable(A12.o lesson12-bridges-hashes/A12.cpp)
add_executable(B12.o lesson12-bridges-hashes/B12.cpp)
add_executable(E12.o lesson12-bridges-hashes/E12.cpp)
add_executable(G12.o lesson12-bridges-hashes/G12.cpp)
add_executable(C12.o lesson12-bridges-hashes/C12.cpp)
add_executable(G4.o lesson4-dp/G4.cpp)
add_executable(F7.o lesson7-shortest-paths/F7.cpp)
add_executable(G7.o lesson7-shortest-paths/G7.cpp)
add_executable(I7.o lesson7-shortest-paths/I7.cpp)
add_executable(J7.o lesson7-shortest-paths/J7.cpp)
add_executable(K7.o lesson7-shortest-paths/K7.cpp)
add_executable(L7.o lesson7-shortest-paths/L7.cpp)
add_executable(D9.o lesson9-lca/D9.cpp)
add_executable(H5.o lesson5-cpp-datastruct/H5.cpp)
add_executable(D5.o lesson5-cpp-datastruct/D5.cpp)
add_executable(H6.o lesson6-math/H6.cpp)
add_executable(F8.o lesson8-dsu/F8.cpp)
add_executable(G8.o lesson8-dsu/G8.cpp)
add_executable(G8_dumb.o lesson8-dsu/G8_dumb.cpp)
add_executable(H8.o lesson8-dsu/H8.cpp)
add_executable(I8.o lesson8-dsu/I8.cpp)
add_executable(G9.o lesson9-lca/G9.cpp)