cmake_minimum_required(VERSION 3.14)
project(tinkoff)

set(CMAKE_CXX_STANDARD 20)
#set(ALLOW_DUPLICATE_CUSTOM_TARGETS TRUE)

#add_subdirectory(lesson02-searches)

add_executable(A.o lesson01-sorts/A.cpp)
add_executable(B.o lesson01-sorts/B.cpp)
add_executable(C.o lesson01-sorts/C.cpp)
add_executable(D.o lesson01-sorts/D.cpp)
add_executable(E.o lesson01-sorts/E.cpp)
add_executable(F.o lesson01-sorts/F.cpp)
add_executable(J.o lesson01-sorts/J.cpp)
add_executable(G.o lesson01-sorts/G.cpp)
add_executable(H.o lesson01-sorts/H.cpp)
add_executable(I.o lesson01-sorts/I.cpp)
add_executable(K.o lesson01-sorts/K.cpp)
add_executable(L.o lesson01-sorts/L.cpp)
add_executable(M.o lesson01-sorts/M.cpp)
add_executable(M_stupid.o lesson01-sorts/M_stupid.cpp)
add_executable(L_stupid.o lesson01-sorts/L_stupid.cpp)


#set_target_properties(A.o PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lesson01-sorts/")
add_executable(A2.o lesson02-searches/A2.cpp)
add_executable(B2.o lesson02-searches/B2.cpp)
add_executable(C2.o lesson02-searches/C2.cpp)
add_executable(D2.o lesson02-searches/D2.cpp)
add_executable(E2.o lesson02-searches/E2.cpp)
add_executable(F2.o lesson02-searches/F2.cpp)
add_executable(G2.o lesson02-searches/G2.cpp)
add_executable(H2.o lesson02-searches/H2.cpp)
add_executable(I2.o lesson02-searches/I2.cpp)
add_executable(J2.o lesson02-searches/J2.cpp)
add_executable(A3.o lesson03-graphs-bfs-dfs/A3.cpp)
add_executable(B3.o lesson03-graphs-bfs-dfs/B3.cpp)
add_executable(C3.o lesson03-graphs-bfs-dfs/C3.cpp)
add_executable(D3.o lesson03-graphs-bfs-dfs/D3.cpp)
add_executable(E3.o lesson03-graphs-bfs-dfs/E3.cpp)
add_executable(A4.o lesson04-dp/A4.cpp)
add_executable(B4.o lesson04-dp/B4.cpp)
add_executable(C4.o lesson04-dp/C4.cpp)
add_executable(D4.o lesson04-dp/D4.cpp)
add_executable(E4.o lesson04-dp/E4.cpp)
add_executable(F4.o lesson04-dp/F4.cpp)
add_executable(A5.o lesson05-cpp-datastruct/A5.cpp)
add_executable(B5.o lesson05-cpp-datastruct/B5.cpp)
add_executable(C5.o lesson05-cpp-datastruct/C5.cpp)
add_executable(E5.o lesson05-cpp-datastruct/E5.cpp)
add_executable(F5.o lesson05-cpp-datastruct/F5.cpp)
add_executable(G5.o lesson05-cpp-datastruct/G5.cpp)
add_executable(A6.o lesson06-math/A6.cpp)
add_executable(B6.o lesson06-math/B6.cpp)
add_executable(D6.o lesson06-math/D6.cpp)
add_executable(F6.o lesson06-math/F6.cpp)
add_executable(G6.o lesson06-math/G6.cpp)
add_executable(A8.o lesson08-dsu/A8.cpp)
add_executable(E8.o lesson08-dsu/E8.cpp)
add_executable(A9.o lesson09-lca/A9.cpp)
add_executable(C9.o lesson09-lca/C9.cpp)
add_executable(I10.o lesson10-sqrt/I10.cpp)
add_executable(J10.o lesson10-sqrt/J10.cpp)
add_executable(H3.o lesson03-graphs-bfs-dfs/H3.cpp)
add_executable(I3.o lesson03-graphs-bfs-dfs/I3.cpp)
add_executable(J3.o lesson03-graphs-bfs-dfs/J3.cpp)
add_executable(K3.o lesson03-graphs-bfs-dfs/K3.cpp)
add_executable(B11.o lesson11-geometry1/B11.cpp)
add_executable(L11.o lesson11-geometry1/L11.cpp)
add_executable(C11.o lesson11-geometry1/C11.cpp)
add_executable(A11.o lesson11-geometry1/A11.cpp)
add_executable(G11.o lesson11-geometry1/G11.cpp)
add_executable(A12.o lesson12-bridges-hashes/A12.cpp)
add_executable(B12.o lesson12-bridges-hashes/B12.cpp)
add_executable(E12.o lesson12-bridges-hashes/E12.cpp)
add_executable(G12.o lesson12-bridges-hashes/G12.cpp)
add_executable(C12.o lesson12-bridges-hashes/C12.cpp)
add_executable(G4.o lesson04-dp/G4.cpp)
add_executable(F7.o lesson07-shortest-paths/F7.cpp)
add_executable(G7.o lesson07-shortest-paths/G7.cpp)
add_executable(I7.o lesson07-shortest-paths/I7.cpp)
add_executable(J7.o lesson07-shortest-paths/J7.cpp)
add_executable(K7.o lesson07-shortest-paths/K7.cpp)
add_executable(L7.o lesson07-shortest-paths/L7.cpp)
add_executable(D9.o lesson09-lca/D9.cpp)
add_executable(H5.o lesson05-cpp-datastruct/H5.cpp)
add_executable(D5.o lesson05-cpp-datastruct/D5.cpp)
add_executable(H6.o lesson06-math/H6.cpp)
add_executable(F8.o lesson08-dsu/F8.cpp)
add_executable(G8.o lesson08-dsu/G8.cpp)
add_executable(G8_dumb.o lesson08-dsu/G8_dumb.cpp)
add_executable(H8.o lesson08-dsu/H8.cpp)
add_executable(I8.o lesson08-dsu/I8.cpp)
add_executable(G9.o lesson09-lca/G9.cpp)
add_executable(I9.o lesson09-lca/I9.cpp)
add_executable(K9.o lesson09-lca/K9.cpp)
add_executable(I11.o lesson11-geometry1/I11.cpp)
add_executable(K11.o lesson11-geometry1/K11.cpp)
add_executable(D11.o lesson11-geometry1/D11.cpp)
add_executable(H11.o lesson11-geometry1/H11.cpp)
add_executable(N11.o lesson11-geometry1/N11.cpp)
add_executable(F11.o lesson11-geometry1/F11.cpp)
add_executable(J11.o lesson11-geometry1/J11.cpp)
add_executable(E11.o lesson11-geometry1/E11.cpp)
add_executable(H12.o lesson12-bridges-hashes/H12.cpp)
add_executable(D13.o lesson13-segtree/D13.cpp)
add_executable(A13.o lesson13-segtree/A13.cpp)
add_executable(G13.o lesson13-segtree/G13.cpp)
add_executable(O3.o lesson03-graphs-bfs-dfs/O3.cpp)
add_executable(P3.o lesson03-graphs-bfs-dfs/P3.cpp)
add_executable(G3.o lesson03-graphs-bfs-dfs/G3.cpp)
add_executable(A20.o lesson20-fenwick/A20.cpp)
add_executable(B20.o lesson20-fenwick/B20.cpp)
add_executable(C20.o lesson20-fenwick/C20.cpp)